# Surya2Boomi

./: .gitignore  DEPLOYMENT_GUIDE_STREAMLIT_CLOUD.md  HF_BLACKOUT_PIPELINE_GUIDE.md  QUICK_FIX.md  README.md  WEB_APP_GUIDE.md  app.py  app_local.py  cloud_setup.py  colab_dependency_fix.py  config.json  dashboard.py  generate_forecast.py  hf_blackout_forecast_24h.csv  local_api_client.py  my_forecast.json  predict_hf_blackout.py  preprocessingScript.py  radio_blackout_models.pkl  requirements.txt  requirements_local.txt  run.sh  run_dashboard.sh  run_local.sh  setup.sh  setup_local_env.sh  solar_flare_colab_api.ipynb  solar_flare_forecast.csv  solar_flare_forecast.json  solar_flare_forecast_24h.csv  start_webapp.sh
Surya/: .gitignore  README.md  pyproject.toml
Surya/downstream_examples/: README.md  download_sample_train_data.py
Surya/downstream_examples/ar_segmentation/: config.yaml  dataset.py  finetune.py
Surya/downstream_examples/euv_spectra_prediction/: README.md  config.yaml  config_infer.yaml  dataset.py  download_data.sh  euv_spectra_tutorial.ipynb  finetune.py  infer.py  models.py
Surya/downstream_examples/solar_flare_forcasting/: README.md  config.yaml  config_infer.yaml  dataset.py  download_data.sh  finetune.py  infer.py  metrics.py  models.py  solar_flare_tutorial.ipynb
Surya/downstream_examples/solar_wind_forcasting/: README.md  config.yaml  config_infer.yaml  dataset.py  download_data.sh  finetune.py  infer.py  models.py  solar_wind_tutorial.ipynb
Surya/surya/datasets/: helio.py  transformations.py
Surya/surya/utils/: config.py  data.py  distributed.py  log.py
Surya/tests/: test_surya.py  test_surya_index.csv
dashboard/: app.py
data/: config.yaml  config_infer.yaml  flare_index.csv  valid_index.csv
docs/: COLAB_FIX.md  DEPENDENCY_FIX.md  DOWNLOAD_FIX.md  LOCAL_SETUP_GUIDE.md  PERFORMANCE_TESTING.md  TROUBLESHOOTING.md
pattern_identification/: predictor.py
scripts/: colab_dependency_fix.py  download_models.py  forecast_and_view.sh  local_inference.py
second model/data/hf_radio_blackout/: radio-blackout-1-1.csv  radio-blackout-2-2.csv  radio-blackout-3-3.csv  radio-blackout-4-4.csv  radio-blackout-5-5.csv
second model/data/solar_flare_data/: solar_flare_data.csv
second model/hf_radio_blackout_model/: output2.py
solar_flarecasting/: feature_columns.pkl
surya_forecasting/: feature_scaler.pkl  generator.py  label_encoder.pkl
tests/: README.md  accuracy_test.py  performance_test.py  test_config.yaml  test_utils.py
tests/results/: performance_test_20260203_163029.json  performance_test_20260203_163029_summary.txt  performance_test_20260203_163758.json  performance_test_20260203_163758_summary.txt
